# medsam-annotate

./: .gitignore  .gitmodules  CLAUDE.md  DEMO.md  README.md  design.md  pyproject.toml  requirements.lock.txt
apps/legus/: main.py
apps/legus/lib/infers/: medsam2.py
apps/legus/lib/measure/: statistics.py
apps/legus/lib/trainers/: medsam2.py
scripts/: bootstrap.sh  check_demo.sh  fetch_data.py  legus_probe.py  qa_overlay.py  reset_demo.sh  start_server.sh
tests/: test_datastore.py  test_infer.py  test_measure.py  test_train.py
