[project]
name = "medsam-annotate"
version = "0.1.0"
description = "AI-assisted pediatric lower-leg ultrasound annotation: MedSAM2 served through MONAI Label to a 3D Slicer client"
readme = "README.md"
requires-python = ">=3.12,<3.13"

# Runtime deps live in the pinned submodules (external/MONAILabel brings MONAI, SAM2,
# FastAPI and friends). Only what MONAI Label does *not* already pull in belongs here.
dependencies = [
    "torch>=2.5.1",
    "torchvision>=0.20.1",
    "pyradiomics-bhklab>=3.1.4", # maintained fork; upstream pyradiomics has no py3.12 wheels
    "SimpleITK>=2.4.0",
    "pandas>=2.2.3",
    "huggingface-hub>=0.27.0",
    "h5py>=3.12.0", # reads the zea/CAMUS HDF5 sequences fetched by scripts/fetch_data.py
    "monailabel",   # from the pinned submodule — see [tool.uv.sources] below
]

[dependency-groups]
dev = [
    "pytest>=8.3.0",
    "ruff>=0.8.0",
]

[tool.uv]
package = false

# MONAI Label is a real dependency, declared here so `uv sync` installs it rather than PRUNING it.
# Before this was declared, a bare `uv sync` removed monailabel/monai/sam2 from the venv and left
# apps/legus unimportable — which happened for real during review.
#
# It must come from the pinned submodule, not PyPI: the newest PyPI release (0.8.5, Nov 2024)
# predates the SAM2 integration this whole adapter is built on.
no-build-isolation-package = ["monailabel"]

[tool.uv.sources]
monailabel = { path = "external/MONAILabel", editable = true }

[tool.ruff]
line-length = 110
target-version = "py312"
extend-exclude = ["external"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "slow: loads a real checkpoint / runs a real (tiny) fine-tune; default suite stays fast without it",
]

# --- Python LSP -------------------------------------------------------------------
# Point the language server at the uv-managed venv, and keep the vendored submodules
# out of analysis (they are third-party code we never edit).
[tool.pyright]
venvPath = "."
venv = ".venv"
pythonVersion = "3.12"
include = ["apps", "scripts", "tests"]
exclude = ["external", ".venv", "**/__pycache__"]
typeCheckingMode = "basic"
reportMissingImports = "error"

# MONAI Label loads an app by putting its directory on sys.path, so inside apps/legus the
# package root is `lib`, not `apps.legus.lib`. Mirror that for the language server, and add
# the repo root so tests can import via the full path.
extraPaths = [".", "apps/legus"]

# monai and monailabel are heavily dynamic (lazy re-exports, runtime class loading), so their
# stubs disagree with working code. Don't let third-party typing noise mask our own errors.
reportPrivateImportUsage = "none"
reportMissingTypeStubs = "none"
